--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -18,7 +18,9 @@
             <button onclick="multiplicar()">Multiplicar</button>
             <button onclick="dividir()">Dividir</button>
         </div>
-        <button><div><h2>Resultado: <span id="resultado">0</span></h2></div></button>
+        <div class="resultado">
+        <button><h2>Resultado: <span id="resultado">0</span></h2></button>
+    </div>
         
     </div>
 
